# info-gain-tool-use

./: README.md  analysis.md  pyproject.toml
results/checkpoints/supervisor/checkpoint-1000/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
results/checkpoints/supervisor/checkpoint-1125/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
results/checkpoints/supervisor/checkpoint-200/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
results/checkpoints/supervisor/checkpoint-400/: README.md  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
results/checkpoints/supervisor/checkpoint-600/: adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
results/checkpoints/supervisor/checkpoint-800/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
results/phase1/: ig_baseline.json  ig_per_sample.pkl  samples_eval.pkl  samples_train.pkl
results/phase2/: results_oracle.pkl  summary_oracle.json
results/phase3/: results_eps_0_0.pkl  results_eps_0_01.pkl  results_eps_0_05.pkl  results_eps_0_1.pkl  results_eps_0_5.pkl  summary_phase3.json
scripts/: run_experiment.py
src/ig_tool_use/: __init__.py  cli.py  config.py
src/ig_tool_use/agent/: __init__.py  ig_agent.py
src/ig_tool_use/data/: __init__.py  arithmetic.py
src/ig_tool_use/experiments/: phase1.py  phase2.py  phase3.py  phase4.py
src/ig_tool_use/rollout/: __init__.py  vllm_rollout.py
src/ig_tool_use/supervisor/: __init__.py  dataset.py  train.py
src/ig_tool_use/tools/: __init__.py  calculator.py
(+1 files in other folders)
